# Alayatales

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  app.py  auth.py  check_deployment.py  install-mongodb.sh  models.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run.sh  setup.py  setup.sh  temple_pages.py  test_connection.py  test_functionality.py  utils.py  vercel.json
.gitlab/issue_templates/: bug_report.md  feature_request.md
.gitlab/merge_request_templates/: default.md
.streamlit/: config.toml
client/: package-lock.json  package.json
client/src/: App.css  App.js
client/src/Components/: AddTemple.js  AdminDashboard.js  CreateTemple.js  EditTemple.js  Header.js  HomePage.js  Login.js  Profile.js  ProtectedRoute.js  Register.js  TempleDetail.js  TempleList.js
client/src/Context/: AuthContext.js
client/src/Services/: TempleService.js  UserService.js
server/: .env  package.json  server.js
server/controllers/: templeController.js  userController.js
server/middleware/: adminMiddleware.js  authMiddleware.js
server/models/: Temple.js  User.js
server/routes/: templeRoutes.js  userRoutes.js
server/uploads/: 1756494683051-hyderabad_P5624.avif  1756532718553-sri-cheeryla-laxmi-nrusimha-swamy-chirala-rangareddy-religious-trusts-l3kck2og4k.avif
